Use @use and @forwards instead of @import in Sass

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         rootMarginBottom: <span>-250px</span>
       </h3>
     </div>
-    <script defer src="./index.js"></script>
+    <script type="module" defer src="./index.js"></script>
     <script
       defer
       src="https://platform.twitter.com/widgets.js"
